# jopcall

./: .gitignore  Cargo.toml  README.md  build.sh
examples/: example.rs
jopcall_proc_macro/: Cargo.toml
jopcall_proc_macro/src/: lib.rs
src/: hashing.rs  helper.rs  jop.rs  lib.rs  peb_walk.rs  pfunction.rs  syscall.rs
