[package]
name = "jopcall"
version = "0.1.0"
edition = "2021"
authors = ["Noah Kirchner"]
description = "Dynamically executed Windows Syscalls via JOP/ROP"
repository = "https://github.com/NoahKirchner/jopcall"
keywords = ["cybersecurity", "malware", "syscalls"]
readme = "README.md"
license = "MIT"
exclude = ["/target/"]

[lib]
name = "jopcall"
path = "src/lib.rs"

[dependencies]
jopcall_proc_macro = "0.1.0" 

# If rust tries to optimize the code it fails miserably. Don't change this.
[profile.release]
opt-level = 0 
lto = false 
codegen-units = 1 

